# SecondBrain

./: .gitignore  README.md  docker-compose.yml  justfile  main.py  pyproject.toml
client/: index.html  justfile  package.json  pnpm-lock.yaml
client/src/: App.tsx  main.tsx
client/src/components/graph/: force-graph.tsx
client/src/components/magicui/: particles.tsx
client/src/components/ui/: globe.tsx
client/src/components/upload/: UploadDropzone.tsx  UploadsCard.tsx
client/src/lib/: concepts.ts  graph.ts  upload.ts
client/src/pages/: Result.tsx
src/dubhack/: __init__.py  app.py  config.py
src/dubhack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dubhack/llm/: bedrock.py  bedrock_deepseek.py
src/dubhack/models/: __init__.py  graph.py  responses.py
src/dubhack/redis/: concept_store.py
src/dubhack/services/: concept_extractor.py  concept_populator.py  dependencies.py  document_store.py  graph_builder.py  orchestrator.py  pdf_compressor.py
tests/: conftest.py  test_app.py
